--- a/PizzaBox.Storing/PizzaBox.Storing.csproj
+++ b/PizzaBox.Storing/PizzaBox.Storing.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="microsoft.entityframeworkcore" Version="3.1.6" />
+    <PackageReference Include="microsoft.entityframeworkcore.sqlserver" Version="3.1.6" />
+  </ItemGroup>
+
 </Project>
