--- a/PizzaBox.Storing/PizzaBox.Storing.csproj
+++ b/PizzaBox.Storing/PizzaBox.Storing.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="microsoft.entityframeworkcore.sqlserver" Version="3.1.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PizzaBox.Domain\PizzaBox.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
