--- a/PizzaBox.Domain/PizzaBox.Domain.csproj
+++ b/PizzaBox.Domain/PizzaBox.Domain.csproj
@@ -1,5 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
+  <!-- <ItemGroup>
+    <ProjectReference Include="..\PizzaBox.Storing\PizzaBox.Storing.csproj" />
+  </ItemGroup> -->
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
