--- a/PizzaBox.Storing/PizzaBox.Storing.csproj
+++ b/PizzaBox.Storing/PizzaBox.Storing.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="microsoft.entityframeworkcore" Version="3.1.6" />
+    <PackageReference Include="microsoft.entityframeworkcore.relational" Version="3.1.6" />
     <PackageReference Include="microsoft.entityframeworkcore.sqlserver" Version="3.1.6" />
   </ItemGroup>
 
